# covsight

./: .gitignore  README.md  ivpm.yaml  pyproject.toml  testplan-cli-design.md  testplan-cli-impl-plan.md  testplan-impl-plan.md  testplan-schema.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: migration-plan.md  requirements.txt
docs/source/: conf.py  index.rst  introduction.rst
docs/source/cicd/: github-actions.rst  gitlab-ci.rst  index.rst  jenkins.rst
docs/source/getting-started/: index.rst  installation.rst  quickstart.rst
docs/source/importing/: avl.rst  cocotb.rst  index.rst  verilator.rst
docs/source/reference/: best-practices.rst  cli.rst  index.rst
docs/source/reference/formats/: index.rst  ncdb-format.rst  xml-interchange.rst  yaml-format.rst
docs/source/reference/python-api/: index.rst  oo-api.rst
docs/source/reporting/: exporting.rst  html-report.rst  index.rst
docs/source/working-with-coverage/: analyzing.rst  comparing.rst  index.rst  merging.rst  reports.rst  test-history.rst  testplan.rst
src/covsight/: __main__.py
src/covsight/analysis/: __init__.py  compare.py  conversion_listener_rich.py  coverage_report.py  coverage_report_builder.py  gaps.py  hotspots.py  metrics.py  report_json.py  report_text.py  show_metrics.py  text_formatter.py
src/covsight/cli/: __main__.py  cmd_convert.py  cmd_history.py  cmd_merge.py  cmd_report.py  cmd_show.py  cmd_testplan.py  format_detection.py  main.py  show_base.py
src/covsight/cli/show/: show_bins.py  (+11 more)
tests/: test_analysis.py  test_cli_smoke.py  test_cli_testplan.py  test_smoke.py
(+3 files in other folders)
